# autonomous-drug-repurposing

./: .dockerignore  .env.example  .gitignore  AGENTS_FILE_OWNERSHIP.md  BE_001_INTEGRATION_NOTE.md  Dockerfile.airflow  Dockerfile.airflow.entrypoint.sh  Dockerfile.gpu  Dockerfile.ml  Dockerfile.python-ml  FIX_LOG.md  FORENSIC_AUDIT_FIX_SUMMARY_V28.md  FORENSIC_AUDIT_FIX_SUMMARY_V29.md  FORENSIC_VERIFICATION_V142.md  ISSUE_OWNERSHIP.md  MANIFEST.in  Makefile  README.md  README_V31.md  TEAMMATE4_INDEPENDENT_VERIFICATION_V122.md  TEAMMATE4_VERIFICATION.md  TEAM_2_VERIFICATION_REPORT.md  TRANSPORT_TLS_HARDENING.md  V105_ROOT_FIX_SUMMARY.md  V113_ROOT_FIX_SUMMARY.md  V125_RED_TEAM_VERIFICATION.md  V30_ROOT_FIX_SUMMARY.md  V31_ROOT_FIX_SUMMARY.md  V90_FORENSIC_VERIFICATION_SUMMARY.md  conftest.py  docker-compose.gpu.yml  docker-compose.observability.yml  docker-compose.tls.yml  docker-compose.yml  pytest.ini  requirements-dev.txt  requirements.txt  run_4phase.py  run_full_platform.py  run_pipeline.py  (+37 more)
.github/: SECURITY.md  dependabot.yml
.github/codeql/: javascript-config.yml  python-config.yml
.github/workflows/: ci.yml  codeql.yml
backend/: __init__.py
backend/api/: __init__.py  main.py  rate_limit.py
common/: validated_hypotheses_schema.py
frontend/: .dockerignore  .env.example  .gitignore  Caddyfile  DEPENDENCY_AUDIT.md  Dockerfile  README.md  UPGRADE_NOTES.md  eslint.config.mjs  instrumentation.ts  jest.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  worklog.md
frontend/__tests__/: teammate-8-kg-contract.test.ts
frontend/contracts/: _url-constants.ts  api_contracts.ts  openapi.json
frontend/docs/: admin-setup.md  external-apis.md
frontend/prisma/: schema.prisma
frontend/scripts/: assemble-contracts.mjs  build-standalone.sh  check-contracts.sh  create-zip.py  extract_openapi.py  generate_api_contracts.py  install-loop.sh  package_zip.py  run-all-tests.sh  run-e2e-tests.js  run-integration-tests.js  v108-runtime-smoke.ts  verify-e2e.ts  verify-fe-020-to-028-runtime.ts  verify-real-code.ts  verify-tm10-v128-argon2-minimal.js  verify-tm10-v128-cypher-and-health.js
frontend/src/: middleware.ts
graph_transformer/: __init__.py  gt_rl_bridge.py  requirements.txt  service.py
graph_transformer/config/: __init__.py
graph_transformer/contracts/: __init__.py  phase3_schema.py
graph_transformer/data/: __init__.py  biomedical_tables.py  drug_aliases.py  graph_builder.py  phase2_adapter.py
graph_transformer/evaluation/: __init__.py
graph_transformer/inference/: __init__.py
observability/: alertmanager.yml  alerts.yml  backup.sh  otel-collector.yml  prometheus.yml
output_real_run/: gt_predictions.csv  node_type_embeddings.json  top_candidates_20260711_083635.csv  top_candidates_20260711_083635.meta.json  top_candidates_20260711_083704.csv  top_candidates_20260711_083704.meta.json
phase1/: .dockerignore  Makefile  __init__.py  _circuit_breaker.py  docker-compose.yml  requirements-dev.txt  requirements.txt  service.py  service_entrypoint.py
phase2/: __init__.py  service.py
phase2/drugos_graph/: .env.example  Dockerfile  __init__.py  __main__.py  _loader_protocol.py  chemberta_encoder.py  chembl_loader.py  clinical_outcome_folder.py  clinicaltrials_loader.py  config.py  config_paths.py  config_schema.py  disgenet_loader.py  drkg_loader.py  drugbank_loader.py  drugbank_parser.py  entity_resolver.py  evaluation.py  exceptions.py  geo_loader.py  gpu_utils.py  graph_queries.py  graph_stats.py  graph_transformer_model.py  id_crosswalk.py  kg_api.py  kg_builder.py  mlflow_tracker.py  model_protocol.py  negative_sampling.py  omim_loader.py  opentargets_loader.py  phase1_bridge.py  pubchem_loader.py  pyg_builder.py  pyproject.toml  requirements.txt  run_bridge.py  run_pipeline.py  schema_mappings.py  (+8 more)
phase2/drugos_graph/data/: verified_uniprot_gene_crosswalk.yaml
phase4/: __init__.py  writeback.py
rl/: __init__.py  cli.py  constants.py  env.py  evaluate.py  requirements.txt  reward.py  reward_weights.rare_disease_partner.yaml  reward_weights.safety_first.yaml  reward_weights.yaml  rl_drug_ranker.py  scientific_thresholds.py  service.py  train.py  validate.py  validated_hypotheses.csv
scripts/: generate_lockfiles.py  generate_lockfiles_from_root.py  gt_api.py  gt_inference.py  hypothesis_writeback.py  pre_commit_issue_guard.py  pre_commit_ownership_guard.py  restore_test.py  rl_api.py  run_e2e_smoke.py  run_production_readiness_gate.py  seed-real-data.sh  smoke-test.sh  test_root_cause_fixes.py  verify_requirements_security.py  verify_teammate4_v122_real_code.py  verify_v82_fixes.py
shared/: __init__.py
tests/: __init__.py  contract_test_chembl_roundtrip.py  contract_test_disgenet_prevalence.py  contract_test_drugbank_withdrawn.py  contract_test_omim_roundtrip.py  contract_test_pubchem_enrichment.py  contract_test_string_ppi_edges.py  contract_test_uniprot_roundtrip.py  run_p3_tm8_real_code_v108.py  run_team12_bridge_real_code.py  run_team12_real_code.py  run_v114_real_code_smoke.py  test_all_18_issues.py  test_b01_b10_w01_w03_fixes.py  test_c1_c5_connectivity.py  test_e2e_integration.py  test_in080_v125_hash_lockfiles.py  test_int_001_to_012_root_fixes.py  test_orch_002_to_006_root_fixes.py  test_p1_041_to_060_v107_root_fixes.py  test_p1_041_to_060_v108_behavioral.py  test_p1_045_withdrawn_drug_list_freshness.py  test_p1_v108_forensic_fixes.py  test_p2_all_issues_verified.py  test_p3_001_to_014_team_member_9.py  test_p3_008_full_root_fix.py  test_p3_011_to_018_team10.py  test_p3_011_to_018_team10_v106_forensic_verify.py  test_p3_014_v119_threadsafe_inference.py  test_p3_015_to_028_forensic_verify.py  test_p3_015_to_028_team10_phase3.py  test_p3_021_032_v125_contract.py  test_p3_021_gradient_stability_v119.py  test_p3_029_to_055_v107_root_fixes.py  test_p3_029_to_055_v108_forensic_behavioral.py  test_p3_032_v119_per_edge_type_out_proj.py  test_p3_forensic_fixes.py  test_p3_team7_batch_a_forensic_fixes.py  test_p3_tm9_forensic_regression.py  test_p3_tm9_model_issues.py  (+51 more)
(+945 files in other folders)
